2010-09-15  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Gestetner-10512.xml,
	  db/source/printer/Gestetner-2212.xml,
	  db/source/printer/Gestetner-2712.xml,
	  db/source/printer/Gestetner-3212.xml,
	  db/source/printer/Gestetner-3502.xml,
	  db/source/printer/Gestetner-3532_4235g.xml,
	  db/source/printer/Gestetner-4502.xml,
	  db/source/printer/Gestetner-4532_4245g.xml,
	  db/source/printer/Gestetner-6002.xml,
	  db/source/printer/Gestetner-7502.xml,
	  db/source/printer/Gestetner-9002.xml,
	  db/source/printer/Gestetner-C7010.xml,
	  db/source/printer/Gestetner-C7116.xml,
	  db/source/printer/Gestetner-C7416.xml,
	  db/source/printer/Gestetner-C7417.xml,
	  db/source/printer/Gestetner-C7425dn.xml,
	  db/source/printer/Gestetner-C7435n.xml,
	  db/source/printer/Gestetner-C7521n.xml,
	  db/source/printer/Gestetner-C7526dn.xml,
	  db/source/printer/Gestetner-C7528n.xml,
	  db/source/printer/Gestetner-C7531dn.xml,
	  db/source/printer/Gestetner-C7535n.xml,
	  db/source/printer/Gestetner-C7640nD.xml,
	  db/source/printer/Gestetner-C8140ND.xml,
	  db/source/printer/Gestetner-C8150ND.xml,
	  db/source/printer/Gestetner-CS555.xml,
	  db/source/printer/Gestetner-DSc224.xml,
	  db/source/printer/Gestetner-DSc232.xml,
	  db/source/printer/Gestetner-DSc328.xml,
	  db/source/printer/Gestetner-DSc332.xml,
	  db/source/printer/Gestetner-DSc338.xml,
	  db/source/printer/Gestetner-DSc38.xml,
	  db/source/printer/Gestetner-DSc38u.xml,
	  db/source/printer/Gestetner-DSc424.xml,
	  db/source/printer/Gestetner-DSc428.xml,
	  db/source/printer/Gestetner-DSc432.xml,
	  db/source/printer/Gestetner-DSc435.xml,
	  db/source/printer/Gestetner-DSc445.xml,
	  db/source/printer/Gestetner-DSc460.xml,
	  db/source/printer/Gestetner-DSc524.xml,
	  db/source/printer/Gestetner-DSc532.xml,
	  db/source/printer/Gestetner-DSm415.xml,
	  db/source/printer/Gestetner-DSm615.xml,
	  db/source/printer/Gestetner-DSm616.xml,
	  db/source/printer/Gestetner-DSm618.xml,