@@ -1,0 +1,20 @@
+<printer id="printer/Brother-MFC9840CDW">
+  <make>Brother</make>
+  <model>MFC9840CDW</model>
+  <mechanism>
+    <laser />
+    <color />
+    <resolution>
+      <dpi>
+        <x>2400</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.brother-usa.com/MFC/ModelDetail.aspx%sProductID=mfc9840cdw</url>
+  <lang>
+    <postscript level="3" />
+    <pcl level="6" />
+  </lang>
+  <functionality>A</functionality>
+</printer>
