@@ -1,0 +1,22 @@
+<printer id="printer/HP-Photosmart_C309g">
+  <make>HP</make>
+  <model>Photosmart C309g</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://h10010.www1.hp.com/wwpc/us/en/sm/WF05a/18972-18972-238444-421635-410635-3984414.html</url>
+  <lang>
+    <pcl level="3" />
+    <proprietary />
+    <pjl />
+  </lang>
+  <functionality>A</functionality>
+  <contrib_url>http://h30434.www3.hp.com/t5/Other-printing-questions/Photosmart-Premium-C309G-Linux-compatible/m-p/139441</contrib_url>
+</printer>
