@@ -1,3 +1,9 @@
+2010-09-27  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/Brother-MFC9840CDW.xml,
+	  db/source/printer/HP-Photosmart_C309g.xml:
+	  New entries added to the MySQL database.
+
 2010-09-15  OpenPrinting Web Server <webmaster@openprinting.org>
 
 	* db/source/printer/Gestetner-10512.xml,
